test/functions/lydia/genericActualTypeArg3.good
genericActualTypeArg3.chpl:2: error: the type of the actual argument 'Foo' is generic
